# FraudShield

./: .replit  README.md  app.py  fraudshield.py  pyproject.toml  replit.md
attached_assets/: Pasted--What-You-ve-Absolutely-Nailed-Architecture-Modularity-Breaking-logic-into-separate-modules-u-1753542213506_1753542213506.txt
cli/: fraudshield.py
data/: sample_transactions.csv
detection/: __init__.py  ml_based.py  rule_based.py
reports/: .gitkeep  flagged_transactions_20250726_001454.csv  flagged_transactions_20250726_150543.csv  flagged_transactions_20250726_150549.csv  fraud_detection_summary_20250726_001454.json  fraud_detection_summary_20250726_001513.json  fraud_detection_summary_20250726_001555.json  fraud_detection_summary_20250726_001618.json  fraud_detection_summary_20250726_002645.json  fraud_detection_summary_20250726_002651.json  fraud_detection_summary_20250726_002717.json  fraud_detection_summary_20250726_002718.json  fraud_detection_summary_20250726_002723.json  fraud_detection_summary_20250726_003635.json  fraud_detection_summary_20250726_144318.json  fraud_detection_summary_20250726_144339.json  fraud_detection_summary_20250726_144410.json  fraud_detection_summary_20250726_144411.json  fraud_detection_summary_20250726_150543.json  fraud_detection_summary_20250726_150549.json
tests/: __init__.py  test_rule_based.py
utils/: __init__.py  data_processor.py  report_generator.py
