[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "folium>=0.20.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.1",
    "streamlit>=1.47.1",
    "streamlit-folium>=0.25.0",
    "tabulate>=0.9.0",
]
